fix Okay Button, fix readablity

--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -43,3 +43,7 @@
   text-decoration: underline;
   color: #0d47a1;
 }
+.btnStyle{
+    padding: 16px;
+    background-color: #1976d2;
+}
